Feat: add enabled flag to listings
